# Auto-Vicuna-Its-Alive

./: README.md  pyproject.toml  requirements.txt
src/auto_vicuna_its_alive_plugin/: __init__.py
src/auto_vicuna_plugin_template/: __init__.py
