[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_vicuna_its_alive_plugin"
version = "0.0.1"
authors = [
  { name="Bill Schumacher", email="34168009+BillSchumacher@users.noreply.github.com" },
]
description = "An example plugin for Auto-Vicuna."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton", "auto-vicuna-plugin-template"]

[project.urls]
"Homepage" = "https://github.com/BillSchumacher/Auto-Vicuna-Its-Alive-Plugin"
"Bug Tracker" = "https://github.com/BillSchumacher/Auto-Vicuna-Its-Alive-Plugin/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"